--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html>
 
 <head>
@@ -26,7 +26,7 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Leah Coates</p>
-					<p class="text-title-company">Vice President</p>
+					<p class="text-title-company">Director</p>
 					<p class="text-title-company">Alterra Capital Partners</p>
 				</div>
 				<div class="col">
